new added modified

--- a/anchor.html
+++ b/anchor.html
@@ -12,7 +12,7 @@
     <a href="https://en.wikipedia.org/wiki/Ratan_Tata"> click here</a>
 
     <audio controls>
-    <source src="assets/audios/mahesh_khaleja.mp3" />
+    <source src="./mahesh_khaleja.mp3">
     </audio>
 
     <table border="5">
